add botton buttom

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="imgContainer">
     <button id="prevButton">Prev</button>
     <img src="Foto/Ancient-History-Roman-Rome-Caligula-Little-Boots.jpg">
     <button id="nextButton">Next</button>
+    </div>
+<div id="dotsNav">
+    <span class="dot dotActive"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+</div>
     <script src="main.js"></script>
 </body>
 </html>
